Contact info for bug reports.

--- a/static/index.html
+++ b/static/index.html
@@ -55,5 +55,7 @@ form {
 
 <p>Invidual ASCII-armored blobs of each signed-up key can be found <a href="/keys/">here.</a> Note that these individual keys (as well as the party keyring) only contain the actual keys. You may fetch all the latest signatures for those keys from the key servers.</p>
 
+<p>Please report any bugs to <a href="mailto:jpo@vt.edu">jpo@vt.edu</a>, or send a <a href="https://github.com/VTCSec/key-collector">pull request</a>!</p>
+
 </body>
 </html>
