Info about time & place.

--- a/static/index.html
+++ b/static/index.html
@@ -21,6 +21,10 @@ form {
 
 <p>Hello!</p>
 
+<p>This is the sign-up page for the 2016 Blacksburg keysigning party organized by <a href="http://racksburg.com/">Rackspace's Blacksburg office</a> and the <a href="http://vtcsec.org/">Cyber Security Club at Virginia Tech</a>. The key-signing event will take place from <b>6:30 to 8:30pm</b> on <b>September 15th</b>, 2016 at <a href="https://www.google.com/maps/place/Rackspace/@37.207734,-80.4211283,17z">Rackspace</a>.</p>
+
+<p><b>If you are new to PGP and this means nothing to you</b>: <a href="http://vtcsec.org/">VTCSec</a> will be holding a hands-on PGP-How-To workshop on Tuesday, September 13th at 6:30 PM in <a href="https://www.google.com/maps/place/Lavery+Hall,+430+Old+Turner+St,+Blacksburg,+VA+24060/@37.2311533,-80.4250181,17z">Lavery Hall</a> 320. All are welcome to attend. Please bring a laptop with <a href="https://gnupg.org/">GnuPG</a> already installed. This workshop is designed to be a hands-on tutorial with the goal of getting you up to speed on the basics of using PGP.</p>
+
 <p>To participate in the key-signing party, everybody needs to have a trusted copy of your public key fingerprint. In past years we have asked people to just submit their information to a non-validating form, but we found that people transcribed things by hand instead of copy/pasting and did we ended up with typos, causing undesirable and avoidable verification delays.</p>
 
 <p>This year, we have implemented a PGP-aware key collection system which does at least some minimal validation. This is an improvement over the free-form text input of previous years where humans mis-transcribed fingerprints leading to entirely avoidable delays during the key signing party.</p>
